# myServer

./: CMakeLists.txt  README.md  autobuild.sh
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  user.hpp  usrmodel.hpp
include/server/db/: db.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemsgmodel.hpp  usrmodel.hpp
include/server/redis/: redis.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  friendmodel.cpp  main.cpp  usermodel.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemsgmodel.cpp
